# vdflex

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
.github/workflows/: build.yml  deploy.yml
docs/: keyvalues_grammar.txt
src/: de.rs  error.rs  lib.rs  ser.rs
src/ser/: formatter.rs  serializer.rs
tests/: ser.rs
