[package]
name = "vdflex"
version = "0.1.1"
authors = ["Evan Hedbor <evan@hedbor.org>"]
edition = "2021"

[dependencies]
indexmap = { version = "2.0.2", optional = true, features = ["serde"] }
indoc = "2.0.4"
paste = "1.0.14"
serde = { version ="1.0.189" }
thiserror = "1.0.50"

[dev-dependencies]
serde = { version = "1.0.189", features = ["derive"] }

[features]
default = ["std"]
preserve_order = ["indexmap"]
std = ["serde/std", "indexmap?/std"]

[profile.test.features]
default = ["std", "preserve_order"]