[package]
name = "vdflex"
version = "0.1.0"
authors = ["Evan Hedbor <evan@hedbor.org>"]
description = "A (de)serializer for the Valve Data File (VDF, a.k.a. KeyValues) format using Serde"
keywords = ["vdf", "keyvalues", "valve", "serialization", "serde"]
categories = ["encoding", "parser-implementations"]
license = "MIT"
repository = "https://github.com/ehedbor/vdflex"
edition = "2021"

[dependencies]
indexmap = { version = "2.0.2", optional = true, features = ["serde"] }
indoc = "2.0.4"
paste = "1.0.14"
serde = { version ="1.0.189" }
thiserror = "1.0.50"

[dev-dependencies]
serde = { version = "1.0.189", features = ["derive"] }

[features]
default = []
preserve_order = ["indexmap"]
